--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "format": "prettier --write \"./**/*.{ts,tsx,json}\""
     },
     "dependencies": {
+        "@radix-ui/react-dropdown-menu": "^2.0.6",
         "@radix-ui/react-slot": "^1.0.2",
         "@reduxjs/toolkit": "^2.2.3",
         "class-variance-authority": "^0.7.0",
