chore: code style fixes

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "music-app",
+    "name": "client",
     "author": "LassTwoKey <dimas.super29@gmail.com>",
     "license": "MIT",
     "private": true,
