--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,8 @@
 {
     "name": "backend",
+    "author": "LassTwoKey <dimas.super29@gmail.com>",
     "version": "0.0.1",
     "description": "",
-    "author": "",
     "private": true,
     "license": "UNLICENSED",
     "scripts": {
