--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,19 @@
         "format": "prettier --write \"./**/*.{ts,tsx,json}\""
     },
     "dependencies": {
+        "@radix-ui/react-avatar": "^1.0.4",
+        "@radix-ui/react-checkbox": "^1.0.4",
+        "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
+        "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-popover": "^1.0.7",
+        "@radix-ui/react-progress": "^1.0.3",
+        "@radix-ui/react-slider": "^1.1.2",
         "@radix-ui/react-slot": "^1.0.2",
         "@reduxjs/toolkit": "^2.2.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "embla-carousel-react": "^8.0.1",
         "lucide-react": "^0.364.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
