--- a/backend/package.json
+++ b/backend/package.json
@@ -22,9 +22,12 @@
     "dependencies": {
         "@nestjs/common": "^10.0.0",
         "@nestjs/core": "^10.0.0",
+        "@nestjs/passport": "^10.0.3",
         "@nestjs/platform-express": "^10.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
+        "passport": "^0.7.0",
+        "passport-local": "^1.0.0",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1"
     },
@@ -40,6 +43,8 @@
         "@types/jest": "^29.5.2",
         "@types/multer": "^1.4.11",
         "@types/node": "^20.3.1",
+        "@types/passport-jwt": "^4.0.1",
+        "@types/passport-local": "^1.0.38",
         "@types/supertest": "^6.0.0",
         "@types/uuid": "^9.0.8",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
