--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
         "clsx": "^2.1.0",
         "embla-carousel-react": "^8.0.1",
         "lucide-react": "^0.364.0",
+        "music-metadata": "^7.14.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
