--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,8 @@
         "@nestjs/platform-express": "^10.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
+        "gridfs-stream": "^1.1.1",
+        "multer-gridfs-storage": "^5.0.2",
         "passport": "^0.7.0",
         "passport-local": "^1.0.0",
         "reflect-metadata": "^0.2.0",
@@ -40,8 +42,10 @@
         "@nestjs/testing": "^10.0.0",
         "@types/bcrypt": "^5.0.2",
         "@types/express": "^4.17.17",
+        "@types/gridfs-stream": "^0.5.39",
         "@types/jest": "^29.5.2",
         "@types/multer": "^1.4.11",
+        "@types/multer-gridfs-storage": "^4.0.8",
         "@types/node": "^20.3.1",
         "@types/passport-jwt": "^4.0.1",
         "@types/passport-local": "^1.0.38",
@@ -54,6 +58,7 @@
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-prettier": "^5.0.0",
         "jest": "^29.5.0",
+        "mongodb": "5.9.1",
         "mongoose": "^8.3.0",
         "passport-jwt": "^4.0.1",
         "prettier": "^3.0.0",
@@ -81,5 +86,8 @@
         ],
         "coverageDirectory": "../coverage",
         "testEnvironment": "node"
+    },
+    "resolutions": {
+        "multer-gridfs-storage/mongodb": "^5.9.1"
     }
 }
